--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "pixi.js": "^6.0.1"
+  },
   "scripts": {
     "production": "webpack --mode production --config webpack.config.prod.js",
     "build": "webpack --mode development --config webpack.config.dev.js",
